Docker, Kubernetes, Swarm/5. Kubernetes Hands On/25. Cert-manager. Настройка HTTPS. Wildcard сертификаты. DNS01 Challenge. AWS Route53/k8s/example-1/deploy-svc-app-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-2
  labels:
    app: kuber-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-server-2
  template:
    metadata:
      labels:
        app: http-server-2
    spec:
      containers:
        - name: kuber-app
          image: bakavets/kuber:v2.0
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-2
spec:
  selector:
    app: http-server-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
