Docker, Kubernetes, Swarm/5. Kubernetes Hands On/25. Cert-manager. Настройка HTTPS. Wildcard сертификаты. DNS01 Challenge. AWS Route53/k8s/example-1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx # replacement of annotation: kubernetes.io/ingress.class: nginx
  tls:
    - hosts:
        - app-1.kubxr.com
        - app-2.kubxr.com
      secretName: app-tls
  rules:
    - host: app-1.kubxr.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kuber-service-1
                port:
                  number: 80
    - host: app-2.kubxr.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kuber-service-2
                port:
                  number: 80
